--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,8 @@ modules.xml
 .idea/sonarlint
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm+all
+
+data/mnist*
+__pycache__/
+.envrc
+shell.nix
